--- a/processor/package.json
+++ b/processor/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "^6.16.2",
-    "kafkajs": "^2.2.4",
-    "prisma": "^6.16.2"
+    "@prisma/client": "^6.16.3",
+    "kafkajs": "^2.2.4"
+  },
+  "devDependencies": {
+    "prisma": "^6.16.3"
   }
 }
